 8. Restore the minimum titlebar heights to those of the 1.5 release.
 9. When reading in shadow configuration, actually set the correct items! Custom
    shadows was always defaulting to using 'focus' colour, no matter what was in
    the config file!
10. Fix issues with duplicate gradient stops when editing gradients in config
    dialog.
11. Fix menubar/titlebar blending for Thunderbird's message composer window.
12. If drawing a background image, ensure that this can also be drawn onto kwin
    border - if it has a bottom edge.
13. When showing style preview in config dialog, do not save current settings to
    a temp file to pass to the style - pass the options via a style based function.
14. Make it possible to detach style preview from config dialog - this way changes
    can be seen immediately.
15. If preview is embedded in config dialog, then always set the menubar size
    XProperty to 0. This prevents the kwin decoration thinking that the main config
    dialog has a menubar.

1.6.1
-----
 1. Add option to have rounded popup menus.
 2. Allow rounded tooltips when not compositing.
 3. Fix kwin titlebar blending for striped backgrounds.
 4. Simplify faded menu item code.
 5. When drawing progressbar contents and label, use same calculations
    to determine position. Fixes odd text on some of Krita's progressbar/spin
    button widgets.
 6. Fix menubar-hiding kwin icon when not blending menubar/titlebar.
 7. 'Fix' konsole titlebar opacity. Note: Menubar is still opaque :-(
 8. Fix background gradient in titlebars when using translucent backgrounds.
 9. Square tooltips for OpenOffice.org
10. Fix windows build.

1.6.0
-----
 1. Add 'glow' focus option - this is now the default.
 2. Fix potential crash in rgbToHsv
 3. Use square-ish focus for view items if using squared selection.
 4. If titlebar opacity=100, and window/dialog opacity does not, then use
    window/dialog opacity for titlebar.
 5. Fix some compiler warnings under openSUSE 11.3