@@ -15,7 +15,8 @@
     the config file!
 10. Fix issues with duplicate gradient stops when editing gradients in config
     dialog.
-11. Fix menubar/titlebar blending for Thunderbird's message composer window.
+11. Fix menubar/titlebar blending for Thunderbird's message composer, calendar,
+    and tasks windows.
 12. If drawing a background image, ensure that this can also be drawn onto kwin
     border - if it has a bottom edge.
 13. When showing style preview in config dialog, do not save current settings to
